# turtle-_bot_magnet_localisation

./: README.md  data_replay.7z  measurement_node.7z  sensor_simulation.7z
data/: test_data.py  test_odom.py  trajectory_circles.csv  trajectory_line1magnet.txt.csv  trajectory_twoloops.txt.csv
data/line1magnet_odometry/: odometry_results.csv
data_replay/: CMakeLists.txt  package.xml
data_replay/src/: data_replay.cpp
ekf_localization/: CMakeLists.txt  package.xml
ekf_localization/config/: params.yaml
ekf_localization/launch/: ekf_localization_launch.py
ekf_localization/src/: ekf_localization_node.cpp
install/: local_setup.sh  setup.sh
install/data_replay/lib/data_replay/: data_replay
install/data_replay/share/data_replay/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/data_replay/share/data_replay/cmake/: data_replayConfig-version.cmake  data_replayConfig.cmake
install/data_replay/share/data_replay/environment/: ament_prefix_path.dsv  path.dsv
install/ekf_localization/lib/ekf_localization/: ekf_localization_node
install/ekf_localization/share/ekf_localization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/measurement_node/lib/measurement_node/: measurement_node
install/measurement_node/share/measurement_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sensor_simulation/lib/sensor_simulation/: sensor_simulation_node
install/sensor_simulation/share/sensor_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/test_visu/lib/test_visu/: pose_recorder
install/test_visu/share/test_visu/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
measurement_node/: CMakeLists.txt  package.xml
measurement_node/src/: measurement_node.cpp
pose_recording_20251114_103859/: trajectory.csv
pose_recording_20251114_111715/: trajectory.csv
pose_recording_20251114_111952/: trajectory.csv
pose_recording_20251114_112043/: trajectory.csv
pose_recording_20251114_112832/: trajectory.csv
pose_recording_20251114_115600/: trajectory.csv
pose_recording_20251117_082402/: trajectory.csv
pose_recording_20251117_090922/: trajectory.csv
pose_recording_20251117_091709/: trajectory.csv
pose_recording_20251117_092534/: trajectory.csv
pose_recording_20251117_092636/: trajectory.csv
pose_recording_20251117_092841/: trajectory.csv
pose_recording_20251117_093628/: trajectory.csv
pose_recording_20251117_094002/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_094839/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_095416/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_100942/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_101009/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_101109/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_103030/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_103558/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_104735/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_105020/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_105154/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251117_143023/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251119_130037/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251119_135419/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251119_135647/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251120_075524/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251120_080014/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251120_082518/: trajectory_combined.csv  trajectory_odom.csv
pose_recording_20251120_082808/: trajectory_combined.csv  trajectory_odom.csv
sensor_simulation/sensor_simulation/: CMakeLists.txt
sensor_simulation/sensor_simulation/src/: sensor_simulation_node.cpp
src/test_visu/: package.xml  setup.cfg  setup.py
src/test_visu/test_visu/: pose_recorder.py
(+22 files in other folders)
