<?xml version="1.0"?>

<package format="2">

  <name>measurement_node</name>

  <version>0.0.0</version>

  <description>ROS 2 measurement node example</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>Apache License 2.0</license>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <build_depend>std_msgs</build_depend>

  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <exec_depend>std_msgs</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>



  <export>

    <build_type>ament_cmake</build_type>

  </export>

</package>


